src/snapshots/markdown_neuraxis__unit_tests__deep_nested_list.snap
---
source: src/lib.rs
expression: doc.content
---
- BulletList:
    items:
      - content: Level 2 Item A2a
        level: 0
        children:
          - content: Level 1 Item B1
            level: 0
            children: []
          - content: Level 0 Item C
            level: 0
            children: []
