src/snapshots/markdown_neuraxis__unit_tests__nested_bullet_list.snap
---
source: src/lib.rs
expression: doc.content
---
- BulletList:
    items:
      - content: Parent item
        level: 0
        children:
          - content: Child item
            level: 1
            children: []
          - content: Another child
            level: 1
            children: []
      - content: Second parent
        level: 0
        children: []
