src/snapshots/markdown_neuraxis__unit_tests__simple_bullet_list.snap
---
source: src/lib.rs
expression: doc.content
---
- BulletList:
    items:
      - content: First item
        segments: ~
        level: 0
        children: []
        nested_content: []
      - content: Second item
        segments: ~
        level: 0
        children: []
        nested_content: []
      - content: Third item
        segments: ~
        level: 0
        children: []
        nested_content: []
