src/snapshots/markdown_neuraxis__unit_tests__single_item.snap
---
source: src/lib.rs
expression: doc.content
---
- BulletList:
    items:
      - content: Single item
        level: 0
        children: []
        nested_content: []
