src/snapshots/markdown_neuraxis__unit_tests__wiki_links_mixed.snap
---
source: src/lib.rs
expression: doc.content
---
- Heading:
    level: 1
    text: Heading
- Paragraph:
    segments:
      - Text: "Paragraph with "
      - WikiLink:
          target: Getting-Started
      - Text: " link."
- BulletList:
    items:
      - content: "List item with [[journal/2024-01-15]] reference"
        segments:
          - Text: "List item with "
          - WikiLink:
              target: journal/2024-01-15
          - Text: " reference"
        level: 0
        children: []
        nested_content: []
      - content: "Another item with [[1_Projects/Website]] link"
        segments:
          - Text: "Another item with "
          - WikiLink:
              target: 1_Projects/Website
          - Text: " link"
        level: 0
        children: []
        nested_content: []
