src/snapshots/markdown_neuraxis__unit_tests__wiki_links_paragraph.snap
---
source: src/lib.rs
expression: doc.content
---
- Paragraph:
    segments:
      - Text: "This paragraph has "
      - WikiLink:
          target: Simple-Link
      - Text: " and "
      - WikiLink:
          target: Folder/Page
      - Text: " references."
